Now using a Config file for storage of user credentials, will need to strip headless from access rights once running better.

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,11 @@
   filter: drop-shadow(0 0 2em #747bff);
 }
 
+@layer base{
+
+}
+
+
 .logo.typescript:hover {
   filter: drop-shadow(0 0 2em #2d79c7);
 }
