--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,9 @@
 }
 
 @layer base{
-
+  button,input,select{
+    @apply my-2 w-full
+  }
 }
 
 
@@ -68,7 +70,8 @@ h1 {
 }
 
 input,
-button {
+button,
+select {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
