--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,17 @@
 
 @layer base{
   button,input,select{
-    @apply my-2 w-full
+    @apply w-full bg-blue-300 border-blue-600 border hover:border-blue-300 hover:cursor-pointer;
+    @apply hover:bg-blue-200 p-2 box-border disabled:bg-blue-200 h-fit
+  }
+  h1{
+    @apply text-4xl
+  }
+  h2{
+    @apply text-2xl
+  }
+  h3{
+    @apply text-xl
   }
 }
 
@@ -69,41 +79,41 @@ h1 {
   text-align: center;
 }
 
-input,
-button,
-select {
-  /*border-radius: 8px;*/
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  /*font-family: inherit;*/
-  color: #0f0f0f;
-  background-color: #b6e6f3;
-  transition: border-color 0.25s;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-}
+/*input,*/
+/*button,*/
+/*select {*/
+/*  !*border-radius: 8px;*!*/
+/*  border: 1px solid transparent;*/
+/*  padding: 0.6em 1.2em;*/
+/*  font-size: 1em;*/
+/*  font-weight: 500;*/
+/*  !*font-family: inherit;*!*/
+/*  color: #0f0f0f;*/
+/*  background-color: #b6e6f3;*/
+/*  transition: border-color 0.25s;*/
+/*  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);*/
+/*}*/
 
-button {
-  cursor: pointer;
-}
+/*button {*/
+/*  cursor: pointer;*/
+/*}*/
 
-button:hover {
-  border-color: #396cd8;
-  background-color: #747bff;
-}
-button:active {
-  border-color: #396cd8;
-  background-color: #e8e8e8;
-}
-button:disabled{
-  background-color: #9ca3af;
-}
+/*button:hover {*/
+/*  border-color: #396cd8;*/
+/*  background-color: #747bff;*/
+/*}*/
+/*button:active {*/
+/*  border-color: #396cd8;*/
+/*  background-color: #e8e8e8;*/
+/*}*/
+/*button:disabled{*/
+/*  background-color: #9ca3af;*/
+/*}*/
 
-input,
-button {
-  outline: none;
-}
+/*input,*/
+/*button {*/
+/*  outline: none;*/
+/*}*/
 
 #greet-input {
   margin-right: 5px;
